# flux

./: .gitignore  Cargo.toml  README.md  SECURITY_TODO.md  deny.toml  pyproject.toml
.claude/: settings.local.json
.flux.example/: .env.example  README.md  westlake.yml
.flux.example/blocks/: aliases.sh  tools.sh  variable.sh  westlake_env.sh  zsh.sh
.flux.example/files/: .tmux.conf  claude-hud.config.json  claude_settings.json  codex_auth.json  codex_auth.json.bak  codex_config.toml  codex_config.toml.bak  opencode.json  opencode_auth.json  xterm-ghostty.terminfo  zellij.config.kdl
.flux.example/scripts/: apt_packages.sh  config_github.sh  fix_permissions.sh  install_ai_tools.sh  install_lsp.sh  install_node.sh  install_nvim.sh  install_openclaw.sh  install_rust.sh  install_uv.sh  install_zsh.sh  setup_language.sh  setup_terminal.sh  start_clash.sh
.flux/blocks/: westlake_env.sh
.flux/config/: a100.toml  default.toml  westlake.toml
.flux/files/: .p10k.zsh  .tmux.conf
.flux/files/ssh/: id_ed25519_wzq.pub
.flux/scripts/: config_github.sh  fix_permissions.sh  init_ssh.sh  install_codex.sh  install_zsh.sh
.github/workflows/: ci.yml
configs/remote/: a100.toml  westlake.toml
configs/remote/blocks/: aliases.sh  zsh.sh
configs/remote/scripts/: apt_packages.sh  install_uv.sh
docs/: flux设计文档.md  schema-migrations.md
docs/superpowers/plans/: 2026-05-01-flux-refactor-plan.md  2026-05-02-phase3-sync-optimization-plan.md  2026-05-02-phase4-sync-features-plan.md  2026-05-02-phase5-audit-fixes-plan.md
docs/superpowers/specs/: 2026-05-01-flux-refactor-design.md
forks/proxy-ssh/: proxy_ssh.py  setup.py
forks/proxy-ssh/proxy_ssh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: audit.rs  config.rs  lib.rs  main.rs  output.rs  path.rs  ssh.rs
src/cli/: common.rs  connect.rs  init.rs  mod.rs  proxy.rs  ssh_config.rs  state.rs  status.rs  sync.rs
src/config/: finder.rs  loader.rs  mod.rs  models.rs  resolver.rs  version.rs
src/core/: config.rs  error.rs  mod.rs
src/core/platform/: mod.rs  unix.rs  windows.rs
src/core/ssh/: client.rs  config.rs  mod.rs
src/flux/: __main__.py  cli.py  config.py  proxy.py  ssh.py
src/flux/sync/: __init__.py  _retry.py  block.py  file.py  script.py
src/proxy/: health.rs  mod.rs  models.rs  server.rs  service.rs  tunnel.rs
src/remote/: fake.rs  mod.rs  retry.rs  ssh.rs
src/reporter/: console.rs  memory.rs  mod.rs  multi_host.rs
src/shell/: executor.rs  mod.rs  system_backend.rs
src/state/: file_store.rs  mod.rs
src/sync/: block.rs  block_sync.rs  file.rs  file_sync.rs  mod.rs  models.rs  plan.rs  script.rs  script_exec.rs  service.rs  version.rs
src/tests/: conftest.py  test_block_sentinel.py  test_config.py  test_sync_block.py  test_sync_file.py  test_sync_script.py
tests/: conftest.py  test_block_sentinel.py  test_cli_commands.py  test_config.py  test_ensure_dir_cache.py  test_exec_drain.py  test_host_key_policy.py  test_pubkey_install.py  test_retry.py  test_reverse_forward_cleanup.py  test_run_sync.py  test_save_ssh_config.py  test_ssh_error_propagation.py  test_sync_block.py  test_sync_file.py  test_sync_script.py  test_write_file_safety.py
tests/fixtures/: westlake_minimal.yml
tests/integration/: pipeline_block.rs  pipeline_dry_run.rs  pipeline_file.rs  pipeline_filter.rs  pipeline_multi_host.rs  pipeline_resume.rs
tests/proptests/: block_sentinel.rs  cache_key.rs  env_interpolation.rs  shell_escape.rs
