[package]
name = "flux"
version = "0.4.0"
edition = "2021"
description = "SSH remote server management tool for syncing personal configurations"
authors = ["Flux Contributors"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH
russh = "0.46"
russh-keys = "0.46"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
thiserror = "1"
anyhow = "1"

# Terminal UI
console = "0.15"
dialoguer = "0.11"

# Utils
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "5"
async-trait = "0.1"
futures = "0.3"

# Cross-platform
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase"] }

[[bin]]
name = "flux"
path = "src/main.rs"
