[package]
name = "flux"
version = "0.4.0"
edition = "2021"
description = "SSH remote server management tool for syncing personal configurations"
authors = ["Flux Contributors"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

# SSH
russh = { version = "0.60.2", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-keys = "0.49.2"

# CLI
clap = { version = "4.5.60", features = ["derive"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"

# Error handling
anyhow = "1.0.102"

# Terminal UI
console = "0.15"
dialoguer = "0.12.0"

# Utils
chrono = { version = "0.4.44", features = ["serde"] }
sha2 = "0.11.0"
dirs = "6.0.0"
async-trait = "0.1.89"
futures = "0.3.32"

# Cross-platform
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase"] }

[[bin]]
name = "flux"
path = "src/main.rs"
