[package]
name = "flux"
version = "0.4.0"
edition = "2021"
description = "SSH remote server management tool for syncing personal configurations"
authors = ["Flux Contributors"]
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

# SSH
russh = { version = "0.60.2", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-keys = "0.49.2"

# CLI
clap = { version = "4.5.60", features = ["derive"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"

# Error handling
thiserror = "2"
anyhow = "1.0.102"

# Terminal UI
console = "0.15"
dialoguer = "0.12.0"

# Utils
chrono = { version = "0.4.44", features = ["serde"] }
sha2 = "0.11.0"
dirs = "6.0.0"
async-trait = "0.1.89"
futures = "0.3.32"
serde_json = "1"
similar = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
globset = "0.4"
walkdir = "2"

# Cross-platform
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winbase"] }

[[bin]]
name = "flux"
path = "src/main.rs"

[lib]
name = "flux"
path = "src/lib.rs"

[dev-dependencies]
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[[test]]
name = "block_sentinel_proptests"
path = "tests/proptests/block_sentinel.rs"

[[test]]
name = "pipeline_file"
path = "tests/integration/pipeline_file.rs"
