[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flux"
version = "0.5.0"
description = "Personal SSH sync + reverse-forward tool (Python rewrite)"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.4",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
]

[project.scripts]
flux = "flux.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/flux"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.11"
